--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,19 @@
-<project name="WebSever" default="compile" >
-	<target name="compile" depends="init">
-		<javac srcdir="." includeantruntime="false">
-	</target>
-	
-	<target name="run" depends="compile">
-		<java classname="WebServer" fork="ture">
-	</target>
+<project default = "compile">
+    <target name="compile"  >
+        <javac srcdir="." includeantruntime = "false"/>
+    </target>
+    
+    <!-- This will allow us to write "ant run" (i.e. compile, then run). -->
+    <target name="run" depends = "compile" >
+       <echo message = "SUCCESS" />
+       <echo message = "NOTE: The ant run command was inputted. Changing the working directory to the test folder." />
+       <java classname = "WebServer" fork="true" >
+          <!-- Change the current working directory to inside the testfolder -->
+          <arg value="true"/>
+       </java>  
+    </target>
+    
+    <!-- End of Project -->
 </project>
+
+
